cmake_minimum_required(VERSION 3.26)
project(Leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(util_test util_test.cpp)

macro(add_leetcode question)
    add_executable(${question} ${question}.cpp)
    # target_link_libraries(question PRIVATE -fsanitize=address)
endmacro()

add_executable(q74 q74.cpp)
add_executable(q95 q95.cpp)
add_executable(q2616 q2616.cpp)
add_executable(q797 q797.cpp)
add_executable(q81 q81.cpp)
add_executable(q518 q518.cpp)
add_executable(q1615 q1615.cpp)
add_executable(q1203 q1203.cpp)
add_executable(q459 q459.cpp)
add_executable(q168 q168.cpp)
add_executable(q767 q767.cpp)
add_executable(q68 q68.cpp)
add_executable(q97 q97.cpp)
add_executable(q646 q646.cpp)
add_executable(q403 q403.cpp)
add_executable(q165 q165.cpp)
add_executable(q881 q881.cpp)
add_executable(q237 q237.cpp)
add_executable(q89 q89.cpp)
add_executable(q88 q88.cpp)
add_executable(q28 q28.cpp)
add_executable(q100 q100.cpp)
add_executable(q42 q42.cpp)
add_executable(q14 q14.cpp)
add_executable(q15 q15.cpp)
add_executable(q383 q383.cpp)
add_executable(q1 q1.cpp)
add_leetcode(q274)
add_leetcode(q20)
