cmake_minimum_required(VERSION 3.26)
project(Leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(util_test util_test.cpp)

macro(add_leetcode question)
    add_executable(${question} ${question}.cpp)
    #    target_compile_options(${question} PUBLIC -fsanitize=address -fsanitize=undefined)
    #    target_link_options(${question} PUBLIC -fsanitize=address -fsanitize=undefined)
endmacro()

add_executable(q74 q74.cpp)
add_executable(q95 q95.cpp)
add_executable(q2616 q2616.cpp)
add_executable(q797 q797.cpp)
add_executable(q81 q81.cpp)
add_executable(q518 q518.cpp)
add_executable(q1615 q1615.cpp)
add_executable(q1203 q1203.cpp)
add_executable(q459 q459.cpp)
add_executable(q168 q168.cpp)
add_executable(q767 q767.cpp)
add_executable(q68 q68.cpp)
add_executable(q97 q97.cpp)
add_executable(q646 q646.cpp)
add_executable(q403 q403.cpp)
add_executable(q165 q165.cpp)
add_executable(q881 q881.cpp)
add_executable(q237 q237.cpp)
add_executable(q89 q89.cpp)
add_executable(q88 q88.cpp)
add_executable(q28 q28.cpp)
add_executable(q100 q100.cpp)
add_executable(q42 q42.cpp)
add_executable(q14 q14.cpp)
add_executable(q15 q15.cpp)
add_executable(q383 q383.cpp)
add_executable(q1 q1.cpp)
add_leetcode(q274)
add_leetcode(q20)
add_leetcode(q36)
add_leetcode(q71)
add_leetcode(q80)
add_leetcode(q55)
add_leetcode(q189)
add_leetcode(q169)
add_leetcode(q2)
add_leetcode(q19)
add_leetcode(q3)
add_leetcode(q121)
add_leetcode(q122)
add_leetcode(q33)
add_leetcode(q228)
add_leetcode(q9)
add_leetcode(q23)
add_leetcode(q104)
add_leetcode(q70)
add_leetcode(q21)
add_leetcode(q125)
add_leetcode(q67)
add_leetcode(q17)
add_leetcode(q162)
add_leetcode(q6)
add_leetcode(q207)
add_leetcode(q530)
add_leetcode(q300)
add_leetcode(q199)
add_leetcode(q141)
add_leetcode(q45)
add_leetcode(q226)
add_leetcode(q58)
add_leetcode(q918)
add_leetcode(q210)
add_leetcode(q66)
add_leetcode(q173)
add_leetcode(q150)
add_leetcode(q205)
add_leetcode(q114)
add_leetcode(q502)
add_leetcode(q167)
add_leetcode(q155)
add_leetcode(q148)
add_leetcode(q242)
add_leetcode(q153)
add_leetcode(q72)
add_leetcode(q63)
add_leetcode(q13)
add_leetcode(q12)
add_leetcode(q380)
add_leetcode(q238)
add_leetcode(q76)
add_leetcode(q133)
add_leetcode(q134)
add_leetcode(q92)
add_leetcode(q215)
add_leetcode(q135)
